Update: 요소클릭 시 해당 요소설정 패널 띄워주기

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -140,6 +140,10 @@ input {
   -o-transition: var(--transition);
 }
 
+select {
+  border: 1px solid var(--borderColor);
+}
+
 button {
   cursor: pointer;
   border: none;
